--- a/src/styles/dark.scss
+++ b/src/styles/dark.scss
@@ -16,9 +16,9 @@ html.dark {
     }
   }
 
-  .right-panel-btn {
-    background-color: var(--el-color-primary-dark);
-  }
+  // .right-panel-btn {
+  //   background-color: var(--el-color-primary-dark);
+  // }
 
   .svg-icon,
   svg {
